log
Thu 16 May 2024 02:26:17 AM UTC: 
 tests:  0|5
total_score: 0/70
396f65c
Thu 16 May 2024 03:42:06 AM UTC: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 5/70
1ac160e
Thu 16 May 2024 03:44:30 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|4
total_score: 15/70
368c548
Thu 16 May 2024 04:26:05 AM UTC: 
 sudoku.c | 57 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 57 insertions(+)
 tests:  2|4
total_score: 15/70
a78e738
Thu 16 May 2024 04:27:04 AM UTC: 
 sudoku.c | 20 --------------------
 1 file changed, 20 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:8: error: unused variable ‘numSM’ [-Werror=unused-variable]
   49 |    int numSM[10] = {0};
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
36ac703
Thu 16 May 2024 04:27:15 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a2a1738
Thu 16 May 2024 04:29:47 AM UTC: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ac235f4
Thu 16 May 2024 04:50:16 AM UTC: 
 sudoku.c | 20 +++++++++-----------
 1 file changed, 9 insertions(+), 11 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:8: error: unused variable ‘numC’ [-Werror=unused-variable]
   48 |    int numC[10] = {0};
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
5d626e8
